All solutions complete. Needs refactor

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -99,12 +99,29 @@ data.new$daytype <- as.factor(as.character(day.list))
 Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). The plot should look something like the following, which was created using simulated data:
 
 ```{r}
-data.new.interval <- split(data.new$steps.filled, data.new$interval)
-steps.new.interval.mean <- ((lapply(data.new.interval, function(x) mean(x, na.rm = TRUE))))
-intervals <- levels(as.factor(data.new$interval))
-mean.steps <- unlist(steps.new.interval.mean)
-end.idx <- data.new$daytype == "weekend"
-plot(x = intervals[end.idx] , y = mean.steps[end.idx], type = 'l', xlab = "interval", ylab = "avg. steps")
+# Subset data based on daytype
+data.new.weekend <- subset(data.new, data.new$daytype == "weekend")
+data.new.weekday <- subset(data.new, data.new$daytype == "weekday")
 
+data.weekend.interval <- split(data.new.weekend$steps.filled, data.new.weekend$interval)
+weekend.interval.mean <- ((lapply(data.weekend.interval, function(x) mean(x, na.rm = TRUE))))
+intervals <- levels(as.factor(data.new.weekend$interval))
+#weekend.mean.steps <- unlist(weekend.interval.mean)
+
+
+```
+
+```{r}
+# Subset data based on daytype
+data.new.weekday <- subset(data.new, data.new$daytype == "weekday")
+
+data.weekday.interval <- split(data.new.weekday$steps.filled, data.new.weekday$interval)
+weekday.interval.mean <- ((lapply(data.weekday.interval, function(x) mean(x, na.rm = TRUE))))
+intervals <- levels(as.factor(data.new.weekday$interval))
+#weekend.mean.steps <- unlist(weekend.interval.mean)
+
+par(mfrow=c(2,1)) 
+plot(x = intervals , y = unlist(weekday.interval.mean), type = 'l', xlab = "interval", ylab = "avg. steps", ylim = c(0, 200)) + title("weekday")
+plot(x = intervals , y = unlist(weekend.interval.mean), type = 'l', xlab = "interval", ylab = "avg. steps", ylim = c(0, 200)) + title("weekend")
 ```
 
